    - Setup the 4 lines of luarendering
    - Set default luarendering text
    - Increment factory count upon placement
    - Decrement factory count when removing a factory
    - Mark the factories exempt from lightning
    - Support blueprinting
    - Unconfigure buildings when factory gets deleted
    - Have code ready to support copying by pipette
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 06. 06
  Info:
    - Commence the left gui phase
    - Badly recreate the logistic section row
    - Slightly better frame
    - Scroll pane
    - Get close enough
    - Cleanup styles
    - Populate the list with actual factories
    - Support deleting factories
    - Cleanup factory deleter
    - Match fp factory name width and ... wrapping
    - Always show space location name
    - Pipette the factory item and remember the index
    - Delete old factories of the same name during exporting
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025. 06. 04
  Info:
    - Change how the debug output is shown
    - Handle machines and modules with quality
    - The items/m button can move/hide, detect that
    - Better detect quality from the sprite button
    - Store power and pollution in the factory table
    - Grab the district's space location
    - Fix missing argument for recipe blocked messages
    - Fix crash when there was no pollution
    - Block recipes that need or make spoiling items
    - Finish the factory planner stage
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 03. 15
  Info:
    - Grab the products, byproducts & ingredients
    - Default serpent to sort keys
    - Validate timescale/rate
    - Check if all products are 100% satisfied
    - Micro
    - Grab the power and pollution
    - Fix sortKeys typo